--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,8 +34,9 @@
 {{- end -}}
 
 {{ template "_internal/opengraph.html" . }}
-{{ template "_internal/twitter_cards.html" . }}
 {{ template "_internal/schema.html" . }}
+
+    <meta name="fediverse:creator" content="{{ .Site.Params.Author.Fediverse }}" />
 
 {{- range .AlternativeOutputFormats }}
 {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
