--- a/layouts/partials/author-card.html
+++ b/layouts/partials/author-card.html
@@ -1,5 +1,6 @@
 {{ if .Site.Params.Author -}}
 <div class="media author-card h-card" itemprop="author" itemscope itemtype="http://schema.org/Person">
+	{{ if .Site.Params.Author.Image }}{{ partialCached "author-image" . }}{{ end }}
 	{{ with .Site.Params.Author.Name }}<h2 class="fn author-name" itemprop="name">{{ . }}</h2>{{ end }}
 	{{ with .Site.Params.Author.Description }}<p class="author-description" itemprop="description">{{ . }}</p>{{ end }}
 </div>
