Remove search button

--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,8 +1,8 @@
 <!-- layouts/partials/search.html -->
 <form id="search__form" class="noscript" method="GET" action="https://duckduckgo.com/" data-language-prefix="{{ site.LanguagePrefix }}">
 	<div class="search__bar">
-		<input id="search__input" name="q" tabindex="0" autocomplete="off" {{ with site.BaseURL }}value="site:{{ . }} "{{ end }} placeholder="{{ i18n "search" }}">
-		<label id="search__button" for="search__input" class="icon" type="button"><span>⌕</span></label>
+		<input id="search__input" name="q" tabindex="0" autocomplete="off" {{ with site.BaseURL }}value="site:{{ . }} "{{ end }} placeholder="{{ i18n "search" }}"><!-- 
+		<label id="search__button" for="search__input" class="icon" type="button"><span>⌕</span></label> -->
 	</div>
 	<div id="search__results" class="articles-list"></div>
 </form>
