Publish downloadable resources

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -37,3 +37,7 @@
 		</section>
 	{{- end -}}
 {{- end }}
+{{/* publish downloadable resources, see: https://gohugo.io/content-management/page-resources/ */}}
+{{- with Resources.Match "*.pdf" -}}
+    {{ range . }}{{ $downloads := .RelPermalink }}{{ end }}
+{{- end -}}
